Line length + Cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ examples/basics/browserconfig.xml
 examples/basics/human.txt
 examples/basics/manifest.json
 examples/basics/robots.txt
+examples/basics/img/loading.svg
+examples/basics/loading.svg
+examples/basics/img/loading.svg
