--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ examples/helloworld/#
 examples/basics/sw.js
 examples/basics/install-service-worker.html
 examples/basics/#
+examples/basics/tokens.php
