--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,7 @@
-name: PHP Composer
+
+# GITHUB STARTER PHP WORKFLOW
+
+name: Main Workflow
 
 on:
   push:
@@ -25,3 +28,13 @@ jobs:
 
     # - name: Run test suite
     #   run: composer run-script test
+
+    # GITHUB FEATURED MISSPELL ACTION
+      
+    - name: misspell-fixer-action
+      uses: sobolevn/misspell-fixer-action@0.1.0
+      with:
+        # Any options for misspell-fixes tool
+        options: -rsvn .
+        
+      
