--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    # COMMON
+
     - uses: actions/checkout@v2
+
+    # COMPOSER
 
     - name: Validate composer.json and composer.lock
       run: composer validate
@@ -23,9 +28,12 @@ jobs:
     - name: PHP Lint
       uses: michaelw90/PHP-Lint@1.0.0
 
-    - name:Misspell Fixer
-      uses: sobolevn/misspell-fixer-action@master
-      uses: peter-evans/create-pull-request@v2.4.4
+    # MISSPELL
+
+    - uses: sobolevn/misspell-fixer-action@master
+      with:
+        options: '-rsvn .'
+    - uses: peter-evans/create-pull-request@v2.4.4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         commit-message: 'Fixes by misspell-fixer'
