--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: PHP Lint
-      uses: michaelw90/PHP-Lint@master
+    # uses: michaelw90/PHP-Lint@master
+      uses: awanesia/PHP-Lint@master
 
     # MISSPELL
 
