Update build.yml - Handling of deprecated set-output command
Use unreleased dev version while we wait for a new one to be cut.
https://github.com/sobolevn/misspell-fixer-action/issues/15

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,10 @@ jobs:
 
     # MISSPELL
 
-    - uses: sobolevn/misspell-fixer-action@master
+    # uses: sobolevn/misspell-fixer-action@master
+    # Use unreleased dev version while we wait for a new one to be cut. See:
+    # https://github.com/sobolevn/misspell-fixer-action/issues/15
+    - uses: sobolevn/misspell-fixer-action@8842a5615f83fed75e8a87015e9300a54d049961
       with:
         options: '-rsvn .'
     - uses: peter-evans/create-pull-request@v3
