--- a/examples/cards/manifest.json
+++ b/examples/cards/manifest.json
@@ -12,7 +12,7 @@
     "screenshots": [],
     "start_url": "https:\/\/villepreux.net\/dom\/examples\/cards?&utm_source=homescreen",
     "display": "standalone",
-    "orientation": "portrait-primary",
+    "orientation": "any",
     "launch_handler": {
         "client_mode": [
             "navigate-existing",
